--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -182,3 +182,14 @@
         font-size: 1rem;
     }
 }
+
+/* about page css section ////////////////////////////////////////////////////////////////// */
+@media (max-width: 700px) {
+    .intro-para h1 {
+        font-size: 1.5rem;
+    }
+
+    .intro-para p {
+        font-size: 1rem;
+    }
+}
