--- a/templates/About.html
+++ b/templates/About.html
@@ -111,9 +111,81 @@
         </div>
     </div>
 
+    <section class="accordion-container-box my20">
+        <section class="why-choose-us my20">
+            <h3 class="mpt-5">WHY CHOOSE US</h3>
+            <h1 class="mpt-5">Innovating Solutions</h1>
+            <h1 class="mpt-5">Digital Mindset</h1>
+        </section>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item my10">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Why Do Business Need IT Solutions?
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body"><p class="mpt-5">IT solutions are essential for businesses to improve efficiency,
+                        productivity, and
+                        competitiveness. They help streamline operations, manage data, enhance communication, and
+                        provide a secure
+                        environment for handling sensitive information. IT solutions also enable businesses to adapt to
+                        technological
+                        advancements and stay ahead in the digital era.</p></div>
+                </div>
+            </div>
+            <div class="accordion-item my10">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        How Can IT Solutions Improve Cybersecurity?
+                    </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body"><p class="mpt-5">IT solutions play a crucial role in enhancing cybersecurity. They can
+                        include firewall
+                        protection, intrusion detection systems, antivirus software, encryption tools, and regular
+                        security
+                        assessments. By implementing these solutions, businesses can protect their data and systems from
+                        unauthorized
+                        access, data breaches, and cyber threats.</p></div>
+                </div>
+            </div>
+            <div class="accordion-item my10">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        How Can I Choose The Right IT Solution For My Business?
+                    </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body"><p class="mpt-5">Selecting the right IT solution requires careful consideration of your business needs, budget,
+                        scalability, security requirements, and compatibility with existing systems. Consulting with IT experts or
+                        engaging an IT service provider can be helpful in identifying the best-fit solutions for your specific
+                        requirements.</p></div>
+                </div>
+            </div>
+            <div class="accordion-item my10">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                        Can IT Solutions Be Customized to Fit Unique Business Needs?
+                    </button>
+                </h2>
+                <div id="flush-collapseFour" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body"><p class="mpt-5">Yes, many IT solutions can be customized to cater to specific business requirements. Software
+                        applications, in particular, can often be tailored to meet unique workflows and processes. However,
+                        customization may vary depending on the solution and vendor capabilities.</p></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- footer----------------------------------------------------- -->
-    <footer class="footer flex-col">
+    <footer class="footer flex-col my20">
         <div class="footer-content-cotainer flex wd-page">
             <div class="column-1 column-common flex-center-col">
                 <h1 class="mpt-5"><strong>About Company</strong></h1>
