--- a/static/css/utility.css
+++ b/static/css/utility.css
@@ -323,6 +323,46 @@ html {
 }
 
 
+/* swiper css section======================= */
+
+.swiper-header {
+  width: 55rem;
+  text-align: center;
+}
+
+.swiper-header h2 {
+  font-size: 1.3rem;
+  color: white;
+}
+
+.swiper-header h4 {
+  font-size: 1.1rem;
+  color: white;
+}
+
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 250px;
+  height: 250px;
+}
+
+.swiper-slide a {
+  text-decoration: none;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 /* contact card/////////////===== */
 
 .contact-card-container {
