--- a/templates/Service_details.html
+++ b/templates/Service_details.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saturian Global - Services</title>
+    <title>Saturian Global - Details</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <link rel="icon" type="image/x-icon" href="/static/media/favicon.png">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-    <link rel="stylesheet" href="/static/css/service.css">
+    <link rel="stylesheet" href="/static/css/service-details.css">
     <link rel="stylesheet" href="/static/css/utility.css">
     <link rel="stylesheet" href="/static/css/responsive.css">
 
@@ -68,171 +68,133 @@
     </header>
 
     <!-- banner section---------------------------------- -->
-    <section style="background: url(/static/media/service-banner.jpg) no-repeat center/cover fixed;"
+    <section style="background: url(/static/media/service-details-banner.jpg) no-repeat center/cover fixed;"
         class="about-banner" id="about-banner">
         <aside class="shade flex-center">
             <div class="about-banner-head">
                 <h1>
-                    Our Services
+                    Service Details
                 </h1>
-                <h4><a href="index.html">Home</a>/Services</h4>
+                <h4><a href="index.html">Home</a>/Service Details</h4>
             </div>
         </aside>
     </section>
 
-    <!-- service intro section-------------------------------------------------- -->
-    <section class="service-intro-section-container flex-center wd-page my10">
-        <center class="first-heading-container my10 p-20">
-            <h1 class="mpt-5">We Provide The Best IT Solutions For Business With Our 5 Years Of Experience</h1>
-            <h3 class="mpt-5">At Saturian Global, we offer a wide range of IT solutions and services that can help you
-                achieve your
-                business goals and objectives. Whether you need to set up a new IT infrastructure, upgrade your existing
-                systems,
-                optimize your network performance, secure your data and devices, or automate your processes, we have the
-                right
-                solution for you.</h3>
-        </center>
-    </section>
-
-    <!-- swipeer <section------------------------>
-    <div class="swiper-header-container flex-center wd-page">
-        <div class="swiper-header flex-center-col">
-            <h2 class="mpt-5">Choose Your Laptop</h2>
-            <h4 class="mpt-5">Our Latest Updates</h4>
-        </div>
-    </div>
-
-    <div class="swiper mySwiper my20">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <a href="">
-                    <img src="/static/media/AMC.png" />
-                </a>
-            </div>
-            <div class="swiper-slide">
-                <a href="">
-                    <img src="/static/media/desktop.png" />
-                </a>
-            </div>
-            <div class="swiper-slide">
-                <a href="">
-                    <img src="/static/media/it-sales.png" />
-                </a>
-            </div>
-            <div class="swiper-slide">
-                <a href="">
-                    <img src="/static/media/laptop.png" />
-                </a>
-            </div>
-            <div class="swiper-slide">
-                <a href="">
-                    <img src="/static/media/macbook.jpg" />
-                </a>
-            </div>
-            <div class="swiper-slide">
-                <a href="">
-                    <img src="/static/media/printer.png" />
-                </a>
-            </div>
-            <div class="swiper-slide">
-                <a href="">
-                    <img src="/static/media/slide1.jpg" />
-                </a>
-            </div>
-            <div class="swiper-slide">
-                <a href="">
-                    <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <!-- contact us card section==================== -->
-    <div class="contact-card-container wd-page flex-center-col">
-        <div class="contact-card wd-page flex-center-col my20">
-            <h1 class="mpt-5 my10">To Get Latest Price Call Us</h1>
-            <h1 class="mpt-5 my10">Don't Be Hesitate To Contact Us</h1>
-            <a href="tel:+91-">
-                <lord-icon class="my10" src="https://cdn.lordicon.com/srsgifqc.json" trigger="hover"
-                    style="width:60px;height:60px" colors="primary:#FFD700">
-                </lord-icon>
-            </a>
-        </div>
-    </div>
-
-    <!-- popular aervices section-------------------------- -->
-
-    <div class="popular-services flex-center-col wd-page" data-aos="fade-up">
-        <div class="heading wd-page flex-center-col m-5">
-            <h1 class="mpt-5">Popular IT Services Provided By</h1>
-            <h2 class="mpt-5">Saturian Global</h2>
-        </div>
-        <section class="service-card-container my10 flex wd-page">
-            <div class="about-card flex-center-col m-10">
-                <img src="/static/media/sicon2.png" alt="">
-                <h1>Manage It Services</h1>
-                <p>We Provide The Best IT Management Services.</p>
-                <a href="{% url 'popular_service' %}">Learn More <i class="fa fa-arrow-right"></i></a>
-            </div>
-            <div class="about-card flex-center-col m-10">
-                <img src="/static/media/sicon4.png" alt="">
-                <h1>Digital Marketing</h1>
-                <p>Reach Out More Customers Across Any Platform, Anywhere.</p>
-                <a href="{% url 'popular_service' %}">Learn More <i class="fa fa-arrow-right"></i></a>
-            </div>
-
-            <div class="about-card flex-center-col m-10">
-                <img src="/static/media/sicon3.png" alt="">
-                <h1>Web Development</h1>
-                <p>We Have The Best Consultation in Web Development.</p>
-                <a href="{% url 'popular_service' %}">Learn More <i class="fa fa-arrow-right"></i></a>
-            </div>
-            <div class="about-card flex-center-col m-10">
-                <img src="/static/media/sicon1 (1).png" alt="">
-                <h1>Product Engineering</h1>
-                <p>We are proud of our scope of services and working.</p>
-                <a href="{% url 'popular_service' %}">Learn More <i class="fa fa-arrow-right"></i></a>
-            </div>
-        </section>
-    </div>
-
-    <!-- web service section------------------------------------------------------ -->
-    <div class="web-service-container-section wd-page flex-center">
-        <section class="web-service-container p-5 my20">
-            <h1 class="mpt-5">We Provide web Development Services</h1>
-            <h1 class="mpt-5">With Our Best Web Developer Team.</h1>
-            <h3 class="mpt-5">We Have The best Software Solution For The Next Generation</h3>
+    <!-- computer rental services------------- -->
+    <div class="rental-service-container flex-center">
+        <div class="rental-services">
+            <h1 class="mpt-5">Computer Rental Services</h1>
+            <h2 class="mpt-5">Coorporate Rentals</h2>
+            <p class="mpt-5">A significant portion of the market is driven by corporate clients who rent computers for short-term
+                projects,
+                events, or to meet temporary needs.</p>
+            <h2 class="mpt-5">Event Rentals</h2>
+            <p class="mpt-5">The event and conference sector accounts for a substantial share of computer rentals, particularly for
+                trade
+                shows, conferences, and exhibitions.</p>
+            <h1 class="mpt-5">Types of Computer Rented</h1>
+            <h2 class="mpt-5">Laptops</h2>
+            <p class="mpt-5">Laptops are the most commonly rented computers due to their portability and versatility.</p>
+            <h2 class="mpt-5">Desktops</h2>
+            <p class="mpt-5">Desktop computer rentals are popular for office setups and educational institutions.</p>
             <hr>
-            <div class="web-framework flex m-5">
-                <div class="frontend backend">
-                    <h2 class="mpt-5 f-h2">We Can Develope Front-End Using Multiple FrameWorks.</h2>
-                    <ul class=" mpt-5  f-ul">
-                        <li class="mpt-5">HTML, CSS Framework BootStrap</li>
-                        <li class="mpt-5">Tailwind CSS</li>
-                        <li class="mpt-5">SCSS (SASS)</li>
-                        <li class="mpt-5">React.js</li>
-                        <li class="mpt-5">Angular.js</li>
-                        <li class="mpt-5">Vuejs</li>
-                    </ul>
-                </div>
-                <div class="frontend backend">
-                    <h2 class="mpt-5 f-h2">We Can Develope Back-End Using Multiple FrameWorks.</h2>
-                    <ul class="mpt-5 f-ul">
-                        <li class="mpt-5">Node.js with MongoDB</li>
-                        <li class="mpt-5">Express.js with MongoDB (MERN) </li>
-                        <li class="mpt-5">Python FLask And Django</li>
-                        <li class="mpt-5">PHP</li>
-                        <li class="mpt-5">Wordpress CMS </li>
-                        <li class="mpt-5">Strapi CMS</li>
-                    </ul>
-                </div>
-            </div>
-
-            <button class="btn-web mpt-10" data-aos="flip-right">
-                <a href="{% url 'home' %}">LEARN MORE <i class="fa fa-arrow-right"></i> </a>
-            </button>
-        </section>
+            <h1 class="mpt-5">Printer Accessories</h1>
+            <h2 class="mpt-5">Ink Cartridges</h2>
+            <p class="mpt-5">These contain the ink used in inkjet printers and are available in various colors. Compatible and
+                refillable
+                cartridges are also popular.</p>
+            <h2 class="mpt-5">Toner Cartridges</h2>
+            <p class="mpt-5">Used in laser printers, these cartridges contain toner powder for high-quality text and image printing.
+            </p>
+            <h2 class="mpt-5">Printer Cables</h2>
+            <p class="mpt-5">USB and other cables are necessary for connecting printers to computers.</p>
+        </div>
     </div>
+
+    <!-- main serviecs section----------------------- -->
+
+    <section class="content-container wd-page flex">
+        <div class="content-columns-1 textcenter m-5">
+            <form class="service-form m-10 p-10" action="{% url 'service_detail' %}" method="post">
+                <h1 class="mpt-5">Customize Your PC with Us.</h1>
+                <input type="text" name="name" id="fullname" placeholder="Name"><br>
+                <input type="email" name="email" id="email" placeholder="Email"><br>
+                <input type="text" name="contact" id="ph-number" placeholder="Phone"><br>
+                <input type="text" name="subject" id="purpose" placeholder="Purpose..."><br>
+                <textarea name="message" id="deails" cols="30" rows="10" placeholder="PC Details..."></textarea>
+                <button class="btn" type="submit"> Send Message <i class="fas fa-arrow-right"></i></button>
+            </form>
+            <div class="service-buttons m-10 p-10">
+                <a href="{% url 'service_detail' %}">
+                    <div class="s-b">
+                        <p class="mpt-5">Web Development</p>
+                    </div>
+                </a>
+                <a href="https://www.globalsaturian.com" target="_blank">
+                    <div class="s-b">
+                        <p class="mpt-5">More With SATURIAN GLOBAL</p>
+                    </div>
+                </a>
+                <a href="{% url 'contact' %}">
+                    <div class="s-b">
+                        <p class="mpt-5">Contact Us</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="content-columns-2 my20">
+            <div class="service-details">
+                <h1 class="mpt-5">Service Overview</h1>
+                <h2 class="mpt-5">Unlock the Power of Technology with Saturian Global</h2>
+                <p class="mpt-5">At Saturian Global, we're your trusted partner in navigating the ever-evolving landscape of
+                    technology.
+                    Our comprehensive suite of IT services is designed to empower your business, streamline operations,
+                    and
+                    enhance your competitive edge. From innovative software development to robust network solutions and
+                    cutting-edge cybersecurity, we've got you covered</p>
+            </div>
+            <hr>
+            <div class="service-details">
+                <h1 class="mpt-5">Network Solutions</h1>
+                <h2 class="mpt-5">Seamless Connectivity, Maximum Productivity</h2>
+                <p class="mpt-5">A well-designed network is the backbone of any modern business. Saturian Global specializes in
+                    crafting
+                    scalable and reliable network solutions. We ensure that your data flows smoothly, your communication
+                    is
+                    uninterrupted, and your business operates at peak efficiency.</p>
+            </div>
+            <hr>
+            <div class="service-details">
+                <h1 class="mpt-5"> Cybersecurity</h1>
+                <h2 class="mpt-5">Protecting What Matters Most</h2>
+                <p class="mpt-5">In an era of increasing cyber threats, safeguarding your digital assets is non-negotiable. Our
+                    cybersecurity
+                    experts implement robust measures to protect your data, systems, and reputation. With cutting-edge
+                    solutions
+                    and proactive monitoring, we keep your business safe from cyberattacks.</p>
+            </div>
+            <hr>
+            <div class="service-details">
+                <h1 class="mpt-5">IT Consulting</h1>
+                <h2 class="mpt-5">Your Strategic IT Partner</h2>
+                <p class="mpt-5">Confused about your IT roadmap? Our experienced consultants are here to guide you. We analyze your
+                    current
+                    infrastructure, understand your goals, and provide tailored recommendations. Let us help you make
+                    informed
+                    decisions and stay ahead in the tech game.</p>
+            </div>
+            <hr>
+            <div class="service-details">
+                <h1 class="mpt-5">24/7 Support</h1>
+                <h2 class="mpt-5">Reliable Support When You Need It</h2>
+                <p class="mpt-5">Technology doesn't sleep, and neither do we. Saturian Global offers round-the-clock IT support to
+                    ensure
+                    your business runs smoothly. From troubleshooting to system maintenance, our experts are just a call
+                    away,
+                    ready to assist you.</p>
+            </div>
+        </div>
+    </section>
 
     <!-- footer----------------------------------------------------- -->
     <footer class="footer flex-col">
