--- a/templates/Popular-services.html
+++ b/templates/Popular-services.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saturian Global - Details</title>
+    <title>Saturian Global - Popular Services</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <link rel="icon" type="image/x-icon" href="/static/media/favicon.png">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-    <link rel="stylesheet" href="/static/css/service-details.css">
+    <link rel="stylesheet" href="/static/css/popular-services.css">
     <link rel="stylesheet" href="/static/css/utility.css">
     <link rel="stylesheet" href="/static/css/responsive.css">
 
@@ -75,7 +75,7 @@
                 <h1>
                     Popular Services
                 </h1>
-                <h4><a href="index.html">Home</a>/popular Services</h4>
+                <h4><a href="index.html">Home</a>/Popular Services</h4>
             </div>
         </aside>
     </section>
