--- a/static/css/popular-service.css
+++ b/static/css/popular-service.css
@@ -2,41 +2,33 @@
 
 .pop-it-serv-content {
     width: 70%;
+    max-width: 65rem;
     margin: auto;
-    padding: 10px;
 }
 
 .pop-it-serv-content h5 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: white;
-    margin: 5px;
-    padding: 5px;
     text-align: center;
 }
 
 .pop-it-serv-content h1 {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     color: white;
-    margin: 5px;
-    padding: 5px;
 }
 
 .pop-it-serv-content h2 {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     color: white;
-    margin: 5px;
-    padding: 5px;
 }
 
 .pop-it-serv-content p {
     font-size: 1rem;
     color: white;
-    margin: 5px;
-    padding: 5px;
 }
 
 hr {
-    color: #c198d9;
+    color: #FFC000;
     width: 100%;
     margin: 5px 0px;
 }
