--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -84,7 +84,9 @@
     <section class="contact-container flex-center-col wd-page">
         <div class="contact-card-box m-20">
             <div class="card-img">
-                <i class="fa fa-phone"></i>
+                <lord-icon src="https://cdn.lordicon.com/bgebyztw.json" trigger="morph" state="morph-phone-ring-finish"
+                    style="width:90px;height:90px" colors="primary:#FFD700">
+                </lord-icon>
             </div>
             <div class="card-info">
                 <h1>Call Us For Any Enquiry</h1>
@@ -95,7 +97,7 @@
                     <a href="tel:01146535346">+91-01146535346</a>
                 </p>
                 <!-- for complaints & service -->
-                <p>For Complaint & Service : <a href="tel:+91-8130980016">+91-8130980016</a></p>
+                <p>For Complaint & Service : <a href="tel:+91-8800654575">+91-8800654575</a></p>
                 <!-- querries   -->
                 <p>Your Querries : <a href="tel:+91-7982912295">+91-7982912295</a></p>
             </div>
@@ -103,7 +105,9 @@
 
         <div class="contact-card-box m-20">
             <div class="card-img">
-                <i class="fa fa-envelope"></i>
+                <lord-icon src="https://cdn.lordicon.com/xtzvywzp.json" trigger="morph" state="morph-phone-ring-finish"
+                    style="width:90px;height:90px" colors="primary:#FFD700">
+                </lord-icon>
             </div>
             <div class="card-info email-address">
                 <h1>For Business Support</h1>
@@ -114,7 +118,9 @@
 
         <div class="contact-card-box  m-20">
             <div class="card-img">
-                <i class="fas fa-map-marked-alt"></i>
+                <lord-icon src="https://cdn.lordicon.com/surcxhka.json" trigger="hover" state="hover-roll"
+                    state="in-jump-dynamic" style="width:90px;height:90px" colors="primary:#FFD700">
+                </lord-icon>
             </div>
             <div class="card-info office-address">
                 <h1>Visit Here</h1>
@@ -161,7 +167,7 @@
         <div class="contact-card wd-page flex-center-col my20">
             <h1 class="mpt-5 my10">To Get Latest Price Call Us</h1>
             <h1 class="mpt-5 my10">Don't Be Hesitate To Contact Us</h1>
-            <a href="tel:+91-">
+            <a href="tel:+91-9667791091">
                 <lord-icon class="my10" src="https://cdn.lordicon.com/srsgifqc.json" trigger="hover"
                     style="width:60px;height:60px" colors="primary:#FFD700">
                 </lord-icon>
