--- a/templates/Popular-services.html
+++ b/templates/Popular-services.html
@@ -82,30 +82,30 @@
 
     <!-- Popular services content <section-------------------------------------------------------------------------------------------- -->
     <section class="pop-it-serv-content">
-        <h5>Manage IT Services</h5>
-        <h1>Market Size and Growth</h1>
-        <h2>The global managed IT services market was valued at approximately $22 billion in 2020.</h2>
-        <p>
+        <h5 class="mpt5">Manage IT Services</h5>
+        <h1 class="mpt5">Market Size and Growth</h1>
+        <h2 class="mpt5">The global managed IT services market was valued at approximately $22 billion in 2020.</h2>
+        <p class="mpt5">
             Key factors driving this growth include the increasing complexity of IT systems, a focus on cost
             optimization, and
             the need for cybersecurity solutions.
         </p>
         <hr>
 
-        <h1>Services Offered by Managed IT Service Providers</h1>
+        <h1 class="mpt5">Services Offered by Managed IT Service Providers</h1>
 
-        <h2>Remote Monitoring and Management (RMM)</h2>
-        <p>
+        <h2 class="mpt5">Remote Monitoring and Management (RMM)</h2>
+        <p class="mpt5">
             MSPs use RMM tools to monitor clients' IT systems and networks remotely, detecting and addressing issues
             proactively.
         </p>
 
-        <h2>Help Desk and Technical Support</h2>
-        <p>
+        <h2 class="mpt5">Help Desk and Technical Support</h2>
+        <p class="mpt5">
             Providing end-users with IT support and assistance for troubleshooting issues.
         </p>
-        <h2>Network and Infrastructure Management</h2>
-        <p>
+        <h2 class="mpt5">Network and Infrastructure Management</h2>
+        <p class="mpt5">
             Managing and maintaining clients' network infrastructure, including routers, switches, and servers.
         </p>
 
@@ -114,9 +114,9 @@
     <hr>
 
     <section class="pop-it-serv-content">
-        <h5>Digital Marketing</h5>
-        <h1>Search Engine Optimization (SEO)</h1>
-        <h2>Optimizing websites to rank higher in search engine results, thereby increasing organic (non-paid) traffic.
+        <h5 class="mpt5">Digital Marketing</h5>
+        <h1 class="mpt5">Search Engine Optimization (SEO)</h1>
+        <h2 class="mpt5">Optimizing websites to rank higher in search engine results, thereby increasing organic (non-paid) traffic.
         </h2>
         <p>
             Digital marketing encompasses a wide range of strategies and techniques to promote products or services
@@ -127,38 +127,38 @@
         </p>
         <hr>
 
-        <h1>Services Offered by Digital Marketing</h1>
+        <h1 class="mpt5">Services Offered by Digital Marketing</h1>
 
-        <h2>Social Media Marketing</h2>
+        <h2 class="mpt5">Social Media Marketing</h2>
         <p>
             Creating and managing social media campaigns on platforms such as Facebook, Instagram, Twitter, and
             LinkedIn.
         </p>
 
-        <h2>Content Marketing</h2>
+        <h2 class="mpt5">Content Marketing</h2>
         <p>
             Developing and distributing valuable content (e.g., blog posts, articles, videos) to attract and engage a
             target
             audience.
         </p>
-        <h2>Email Marketing</h2>
+        <h2 class="mpt5">Email Marketing</h2>
         <p>
             Creating and sending email campaigns to nurture leads and maintain customer relationships.
         </p>
 
-        <h2>Influencer Marketing</h2>
+        <h2 class="mpt5">Influencer Marketing</h2>
         <p>
             Collaborating with influencers in the industry to promote products or services.
         </p>
 
-        <h2>Affiliate Marketing</h2>
-        <p>
+        <h2 class="mpt5">Affiliate Marketing</h2>
+        <p class="mpt5">
             Managing affiliate programs where partners promote products or services in exchange for a commission on
             sales.
         </p>
 
         <h2>Online Advertising</h2>
-        <p>
+        <p class="mpt5">
             Creating and managing display and banner advertising campaigns on websites and ad networks.
         </p>
 
@@ -168,47 +168,47 @@
     <hr>
 
     <section class="pop-it-serv-content">
-        <h5>Product Engineering</h5>
+        <h5 class="mpt5">Product Engineering</h5>
 
-        <h1>Services Offered by Product Engineering</h1>
+        <h1 class="mpt5">Services Offered by Product Engineering</h1>
 
-        <h2> Product Development</h2>
-        <p>
+        <h2 class="mpt5"> Product Development</h2>
+        <p class="mpt5">
             Saturian Global may assist in the complete product development lifecycle, from conceptualization and design
             to
             prototyping, testing, and final production.
         </p>
 
-        <h2>Prototype Development</h2>
-        <p>
+        <h2 class="mpt5">Prototype Development</h2>
+        <p class="mpt5">
             They might create prototypes and proof-of-concept models to test product ideas before full-scale production.
         </p>
-        <h2>Design and Engineering</h2>
-        <p>
+        <h2 class="mpt5">Design and Engineering</h2>
+        <p class="mpt5">
             Saturian Global may offer design and engineering services, including CAD (Computer-Aided Design) and 3D
             modeling, to create detailed product plans.
         </p>
 
-        <h2>IoT and Embedded Systems</h2>
-        <p>
+        <h2 class="mpt5">IoT and Embedded Systems</h2>
+        <p class="mpt5">
             If applicable, they may specialize in developing products with Internet of Things (IoT) capabilities and
             embedded
             systems for connectivity and smart features.
         </p>
 
-        <h2>Hardware and Software Integration</h2>
-        <p>
+        <h2 class="mpt5">Hardware and Software Integration</h2>
+        <p class="mpt5">
             For tech products, they might focus on integrating hardware and software components for seamless operation.
         </p>
 
-        <h2>Product Lifecycle Management</h2>
-        <p>
+        <h2 class="mpt5">Product Lifecycle Management</h2>
+        <p class="mpt5">
             Saturian Global could help manage a product throughout its lifecycle, including updates, maintenance, and
             eventual end-of-life considerations.
         </p>
 
-        <h2>Cost Optimization</h2>
-        <p>
+        <h2 class="mpt5">Cost Optimization</h2>
+        <p class="mpt5">
             Product engineering services may include cost analysis and optimization to make products more competitive in
             the
             market.
