--- a/templates/About.html
+++ b/templates/About.html
@@ -17,56 +17,6 @@
 </head>
 
 <body>
-    <!-- navbar------------------------------------>
-    <header id="header">
-        <div class="logo-part">
-            <a href="index.html">
-                <img src="/static/media/saturian.png" alt="saturian logo" />
-                <h1>Saturian Global</h1>
-            </a>
-        </div>
-        <ul id="navbar" class="navbar">
-            <li class="link">
-                <a href="index.html" class="active">Home</a>
-            </li>
-            <li class="link">
-                <a href="About.html">About</a>
-            </li>
-            <li class="link" class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                </ul>
-            <li class="link">
-                <a href="Service.html">Services</a>
-            </li>
-            <li class="link">
-                <a href="Contact.html">Contact us</a>
-            </li>
-            <a href="#" id="close" class="link">
-                <lord-icon src="https://cdn.lordicon.com/nqtddedc.json" trigger="hover" colors="primary:#FFD700"
-                    style="width:25px;height:25px">
-                </lord-icon>
-            </a>
-        </ul>
-        
-        <div id="hamburger">
-            <lord-icon id="bar" src="https://cdn.lordicon.com/swcqkzdc.json" trigger="hover"
-                style="width:25px;height:25px" colors="primary:#FFD700">
-            </lord-icon>
-        </div>
-    </header>
 
 
     <!-- banner section---------------------------------- -->
@@ -83,7 +33,7 @@
 
     <!-- company intro section--------------------------------------- -->
 
-    <section class="intro-first flex my20 mx10">
+    <section class="intro-first flex my20">
         <div class="intro-para p-5">
             <h1 class="mpt-5">Our Foundation</h1>
             <p class="mpt-5">Founded in 2021, as a Pvt Ltd Company under Companies act of India, we are Indian company
@@ -104,7 +54,7 @@
         <div class="contact-card wd-page flex-center-col my20">
             <h1 class="mpt-5 my10">To Get Latest Price Call Us</h1>
             <h1 class="mpt-5 my10">Don't Be Hesitate To Contact Us</h1>
-            <a href="tel:+91-">
+            <a href="tel:+91-9667791091">
                 <lord-icon class="my10" src="https://cdn.lordicon.com/srsgifqc.json" trigger="hover"
                     style="width:60px;height:60px" colors="primary:#FFD700">
                 </lord-icon>
@@ -184,96 +134,6 @@
             </div>
         </div>
     </section>
-
-    <!-- footer----------------------------------------------------- -->
-    <footer class="footer flex-col my20">
-        <div class="footer-content-cotainer flex wd-page">
-            <div class="column-1 column-common flex-center-col">
-                <h1 class="mpt-5"><strong>About Company</strong></h1>
-                <ul>
-                    <li><a href="Services.html" class="flex">
-                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
-                                colors="primary:#FFD700" style="width:25px;height:25px">
-                            </lord-icon>
-                            <p class="mpt-5">Services</p>
-                        </a></li>
-                    <li><a href="About.html" class="flex">
-                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
-                                colors="primary:#FFD700" style="width:25px;height:25px">
-                            </lord-icon>
-                            <p class="mpt-5">About</p>
-                        </a></li>
-                    <li><a href="Contact.html" class="flex">
-                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
-                                colors="primary:#FFD700" style="width:25px;height:25px">
-                            </lord-icon>
-                            <p class="mpt-5">Contact Us</p>
-                        </a></li>
-                    <li><a href="https://www.globalsaturian.com" class="flex">
-                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
-                                colors="primary:#FFD700" style="width:25px;height:25px">
-                            </lord-icon>
-                            <p class="mpt-5">More With Saturian Global</p>
-                        </a></li>
-                </ul>
-            </div>
-            <div class="column-2 column-common my20 flex-center-col">
-                <h1 class="mpt-5"><strong>Explore More</strong></h1>
-                <ul>
-                    <li><a href="#" class="flex">
-                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
-                                colors="primary:#FFD700" style="width:25px;height:25px">
-                            </lord-icon>
-                            <p class="mpt-5">PC For Rent</p>
-                        </a></li>
-                    <li><a href="Popular-services.html" class="flex">
-                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
-                                colors="primary:#FFD700" style="width:25px;height:25px">
-                            </lord-icon>
-                            <p class="mpt-5">Digital Marketing</p>
-                        </a></li>
-                    <li><a href="Popular-services.html" class="flex">
-                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
-                                colors="primary:#FFD700" style="width:25px;height:25px">
-                            </lord-icon>
-                            <p class="mpt-5">Product Engineering</p>
-                        </a></li>
-                    <li><a href="Service-details.html" class="flex">
-                            <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
-                                colors="primary:#FFD700" style="width:25px;height:25px">
-                            </lord-icon>
-                            <p class="mpt-5">Customize Your PC</p>
-                        </a></li>
-                </ul>
-            </div>
-            </section>
-            <div class="column-3 my20 column-common flex-center-col">
-                <ul>
-                    <p class="mpt-5">Mail Us Your Querries on</p>
-                    <li><a class="mpt-5" href="mailto:Info@Saturiannglobal.com"
-                            target="_blank">Info@Saturiannglobal.com</a></li>
-                    <li><a class="mpt-5" href="mailto:contact@Saturiannglobal.com"
-                            target="_blank">Contact@Saturiannglobal.com</a>
-                    </li>
-            </div>
-            <div class="column-4 my20 column-common flex-center-col">
-                <div class="column-4-img">
-                    <img src="/static/media/saturian.png" alt="saturian logo">
-                </div>
-                <div class="socialmedia flex wd-page">
-                    <a href="https://www.instagram.com/saturian_global?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i
-                            class="fab fa-instagram fa-lg"></i></a>
-                    <a href="" target="_blank"><i class="fab fa-facebook fa-lg"></i></a>
-                    <a href="http://www.linkedin.com/in/saturian-global-49889428a" target="_blank"><i
-                            class="fab fa-linkedin fa-lg"></i></a>
-                </div>
-            </div>
-            <!-- copyright section ----------------------->
-            <div class="copyright flex-center wd-page">
-                <h1 class="mpt-5">Copyright @2023 SATURIAN GLOBAL</h1>
-            </div>
-        </div>
-    </footer>
 
     <!-- go to top button--------------------------------------- -->
     <a href="#">
