--- a/templates/index.html
+++ b/templates/index.html
@@ -35,18 +35,10 @@
             <li class="link" class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    Dropdown
+                    Products
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Laptop</a></li>
                 </ul>
             <li class="link">
                 <a href="Service.html">Services</a>
@@ -111,37 +103,36 @@
                 Enterprise Solutions</h2>
         </div>
         <div class="service-card-container flex my10 wd-page">
-            <a href="">
+            <a href="Service-details.html">
                 <div class="info-card flex-center-col my10">
                     <img src="/static/media/laptop.png" alt="">
                     <h3 class="mpt-5">Rental Services</h3>
                 </div>
             </a>
-            <a href="">
+            <a href="Service-details.html">
                 <div class="info-card flex-center-col my10">
                     <img src="/static/media/it-sales.png" alt="">
                     <h3 class="mpt-5">IT Sales</h3>
                 </div>
             </a>
-            <a href="">
+            <a href="Service-details.html">
                 <div class="info-card flex-center-col my10">
                     <img src="/static/media/AMC.png" alt="">
                     <h3 class="mpt-5">AMC Computer Services</h3>
                 </div>
             </a>
-            <a href="">
+            <a href="Service-details.html">
                 <div class="info-card flex-center-col my10">
                     <img src="/static/media/desktop.png" alt="">
                     <h3 class="mpt-5">PC Build</h3>
                 </div>
             </a>
-            <a href="">
+            <a href="Service-details.html">
                 <div class="info-card flex-center-col my10">
                     <img src="/static/media/printer.png" alt="">
                     <h3 class="mpt-5">Printers & Accessories</h3>
                 </div>
             </a>
-
         </div>
     </div>
 
@@ -203,7 +194,7 @@
         <div class="contact-card wd-page flex-center-col my20">
             <h1 class="mpt-5 my10">To Get Latest Price Call Us</h1>
             <h1 class="mpt-5 my10">Don't Be Hesitate To Contact Us</h1>
-            <a href="tel:+91-">
+            <a href="tel:+91-9667791091">
                 <lord-icon class="my10" src="https://cdn.lordicon.com/srsgifqc.json" trigger="hover"
                     style="width:60px;height:60px" colors="primary:#FFD700">
                 </lord-icon>
@@ -226,13 +217,16 @@
                     </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body"><p class="mpt-5">IT solutions are essential for businesses to improve efficiency,
-                        productivity, and
-                        competitiveness. They help streamline operations, manage data, enhance communication, and
-                        provide a secure
-                        environment for handling sensitive information. IT solutions also enable businesses to adapt to
-                        technological
-                        advancements and stay ahead in the digital era.</p></div>
+                    <div class="accordion-body">
+                        <p class="mpt-5">IT solutions are essential for businesses to improve efficiency,
+                            productivity, and
+                            competitiveness. They help streamline operations, manage data, enhance communication, and
+                            provide a secure
+                            environment for handling sensitive information. IT solutions also enable businesses to adapt
+                            to
+                            technological
+                            advancements and stay ahead in the digital era.</p>
+                    </div>
                 </div>
             </div>
             <div class="accordion-item my10">
@@ -243,13 +237,16 @@
                     </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body"><p class="mpt-5">IT solutions play a crucial role in enhancing cybersecurity. They can
-                        include firewall
-                        protection, intrusion detection systems, antivirus software, encryption tools, and regular
-                        security
-                        assessments. By implementing these solutions, businesses can protect their data and systems from
-                        unauthorized
-                        access, data breaches, and cyber threats.</p></div>
+                    <div class="accordion-body">
+                        <p class="mpt-5">IT solutions play a crucial role in enhancing cybersecurity. They can
+                            include firewall
+                            protection, intrusion detection systems, antivirus software, encryption tools, and regular
+                            security
+                            assessments. By implementing these solutions, businesses can protect their data and systems
+                            from
+                            unauthorized
+                            access, data breaches, and cyber threats.</p>
+                    </div>
                 </div>
             </div>
             <div class="accordion-item my10">
@@ -261,10 +258,15 @@
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body"><p class="mpt-5">Selecting the right IT solution requires careful consideration of your business needs, budget,
-                        scalability, security requirements, and compatibility with existing systems. Consulting with IT experts or
-                        engaging an IT service provider can be helpful in identifying the best-fit solutions for your specific
-                        requirements.</p></div>
+                    <div class="accordion-body">
+                        <p class="mpt-5">Selecting the right IT solution requires careful consideration of your business
+                            needs, budget,
+                            scalability, security requirements, and compatibility with existing systems. Consulting with
+                            IT experts or
+                            engaging an IT service provider can be helpful in identifying the best-fit solutions for
+                            your specific
+                            requirements.</p>
+                    </div>
                 </div>
             </div>
             <div class="accordion-item my10">
@@ -276,9 +278,13 @@
                 </h2>
                 <div id="flush-collapseFour" class="accordion-collapse collapse"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body"><p class="mpt-5">Yes, many IT solutions can be customized to cater to specific business requirements. Software
-                        applications, in particular, can often be tailored to meet unique workflows and processes. However,
-                        customization may vary depending on the solution and vendor capabilities.</p></div>
+                    <div class="accordion-body">
+                        <p class="mpt-5">Yes, many IT solutions can be customized to cater to specific business
+                            requirements. Software
+                            applications, in particular, can often be tailored to meet unique workflows and processes.
+                            However,
+                            customization may vary depending on the solution and vendor capabilities.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -348,7 +354,7 @@
                             </lord-icon>
                             <p class="mpt-5">Contact Us</p>
                         </a></li>
-                    <li><a href="https://www.globalsaturian.com" class="flex">
+                    <li><a href="https://www.globalsaturian.com" target="_blank" class="flex">
                             <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
                                 colors="primary:#FFD700" style="width:25px;height:25px">
                             </lord-icon>
@@ -359,7 +365,7 @@
             <div class="column-2 column-common my20 flex-center-col">
                 <h1 class="mpt-5"><strong>Explore More</strong></h1>
                 <ul>
-                    <li><a href="#" class="flex">
+                    <li><a href="Service-details.html" class="flex">
                             <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
                                 colors="primary:#FFD700" style="width:25px;height:25px">
                             </lord-icon>
@@ -389,10 +395,10 @@
             <div class="column-3 my20 column-common flex-center-col">
                 <ul>
                     <p class="mpt-5">Mail Us Your Querries on</p>
-                    <li><a class="mpt-5" href="mailto:Info@Saturiannglobal.com"
-                            target="_blank">Info@Saturiannglobal.com</a></li>
-                    <li><a class="mpt-5" href="mailto:contact@Saturiannglobal.com"
-                            target="_blank">Contact@Saturiannglobal.com</a>
+                    <li><a class="mpt-5" href="mailto:Info@Saturianglobal.com"
+                            target="_blank">Info@Saturianglobal.com</a></li>
+                    <li><a class="mpt-5" href="mailto:contact@Saturianglobal.com"
+                            target="_blank">Contact@Saturianglobal.com</a>
                     </li>
             </div>
             <div class="column-4 my20 column-common flex-center-col">
@@ -402,7 +408,8 @@
                 <div class="socialmedia flex wd-page">
                     <a href="https://www.instagram.com/saturian_global?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i
                             class="fab fa-instagram fa-lg"></i></a>
-                    <a href="" target="_blank"><i class="fab fa-facebook fa-lg"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61550589569176&mibextid=ZbWKwL" target="_blank"><i
+                            class="fab fa-facebook fa-lg"></i></a>
                     <a href="http://www.linkedin.com/in/saturian-global-49889428a" target="_blank"><i
                             class="fab fa-linkedin fa-lg"></i></a>
                 </div>
