product page added

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,13 @@
                     Products
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Laptop</a></li>
+                    <li><a class="dropdown-item" href="Laptop.html">Laptop</a></li>
+                    <li><a class="dropdown-item" href="#">Apple</a></li>
+                    <li><a class="dropdown-item" href="#">Computers</a></li>
+                    <li><a class="dropdown-item" href="#">CCTV</a></li>
+                    <li><a class="dropdown-item" href="#">Printers</a></li>
+                    <li><a class="dropdown-item" href="#">Accessories</a></li>
+                    <li><a class="dropdown-item" href="#">All in One</a></li>
                 </ul>
             <li class="link">
                 <a href="Service.html">Services</a>
